--- a/platformio.ini
+++ b/platformio.ini
@@ -10,3 +10,8 @@
 [platformio]
 src_dir = examples/SerialController
 lib_dir = src
+
+[env:featheresp32]
+platform = espressif32
+board = featheresp32
+framework = arduino
