platform io build now works

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,9 +9,11 @@
 ; https://docs.platformio.org/page/projectconf.html
 [platformio]
 src_dir = examples/SerialController
-lib_dir = src
+lib_dir = ./
+
 
 [env:featheresp32]
 platform = espressif32
 board = featheresp32
 framework = arduino
+monitor_speed = 115200
